--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,13 @@ __pycache__/
 # Jupyter
 .ipynb_checkpoints/
 
-# Data
+# Data but keep the artifacts folder and the files inside
 data/
 *.csv
 *.parquet
+!artifacts/
+!artifacts/*.csv
+!artifacts/*.parquet
 
 # MLflow
 mlruns/
