--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,6 +1,8 @@
 name: Monthly Training and Drift-Based Retraining
 
 on:
+  schedule:
+     - cron: "0 0 * * *"	
   workflow_dispatch:
     inputs:
       month:
