Update training workflow

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -40,13 +40,13 @@ jobs:
           fi	
 
       - name: Run training for a single month
-        if: ${{ inputs.month != '-1' }}
+        if: ${{ steps.set-month.outputs.month != '-1' }}
         run: |
-          echo "Running training for month ${{ inputs.month }}"
-          python -m src.pipeline_train --month ${{ inputs.month }} --drift-threshold 0.05
+          echo "Running training for month ${{ steps.set-month.outputs.month }}"
+          python -m src.pipeline_train --month ${{ steps.set-month.outputs.month }} --drift-threshold 0.05
 
       - name: Run full 12-month simulation
-        if: ${{ inputs.month == '-1' }}
+        if: ${{ steps.set-month.outputs.month == '-1' }}
         run: |
           echo "Running full year simulation"
           for i in {0..12}; do
