--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -59,11 +59,12 @@ jobs:
 
       - name: Write retrain flag into repo
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add state/retrain_flag.txt
-          git commit -m "Update retrain flag after training" || echo "No changes to commit"
-          git push 
+          mkdir -p state
+          if [ -f retrain_flag.txt ]; then
+            cp retrain_flag.txt state/retrain_flag.txt
+          else
+            echo "false" > state/retrain_flag.txt
+          fi 
  
       - name: Upload trained model
         uses: actions/upload-artifact@v4
