--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,6 @@ permissions:
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +21,7 @@ jobs:
 
       - name: Read retrain flag
         id: read_flag
-        run: echo "retrain=$(cat state/retrain_flag.txt)" >> $GITHUB_OUTPUT
+        run: echo "retrain=$(cut -d' ' -f1 state/retrain_flag.txt)" >> $GITHUB_OUTPUT
 
       - name: Stop if no retraining hapened
         if: ${{ steps.read_flag.outputs.retrain != 'true' }}
@@ -43,4 +42,3 @@ jobs:
           git add api/models/fraud_model.joblib
           git commit -m "Deploy updated model after retraining" || echo "No changes to commit"
           git push
-
