--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -103,3 +103,11 @@ jobs:
           name: baseline-stats
           path: artifacts/baseline_stats.parquet
 
+      - name: Trigger deployment workflow
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -d '{"event_type": "deploy_model", "client_payload": {"run_id": "'${{ github.run_id }}'"}}'
+
