Add MLflow artifact upload to workflow

--- a/.github/workflows/train_deploy.yml
+++ b/.github/workflows/train_deploy.yml
@@ -88,4 +88,10 @@ jobs:
           git commit -m "Deploy updated model after retraining" || echo "No changes to commit"
           git push
 
+      - name: Upload MLflow run artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: mlflow-run
+          path: mlruns
+
 
