Add MLflow artifact upload to workflow

--- a/.github/workflows/train_deploy.yml
+++ b/.github/workflows/train_deploy.yml
@@ -92,6 +92,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-run
-          path: mlruns
+          path: ${{ github.workspace }}/mlruns
 
 
