--- a/.github/workflows/train_deploy.yml
+++ b/.github/workflows/train_deploy.yml
@@ -4,15 +4,19 @@ on:
   schedule:
     - cron: "0 0 1 * *"
   workflow_dispatch:
-    inputs:
+    inputs: 
       simulate_year:
         description: "Simulate full year of data? (true/false)"
         required: false
         default: "false"
-
+      month:
+        description: "Month to run (0-12). Ignored if simulate_year=true."
+        required: false
+        default: "0"
+          
 permissions:
   contents: write
-
+        
 jobs:
   train_and_deploy:
     runs-on: ubuntu-latest
@@ -27,12 +31,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-
+            
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+        
       - name: Determine training mode
         id: mode
         run: |
@@ -47,9 +51,11 @@ jobs:
         if: ${{ steps.mode.outputs.simulate != 'true' }}
         run: |
           if [ "${{ github.event_name }}" = "schedule" ]; then
+            # Real calendar month for scheduled runs
             echo "month=$(date +%-m)" >> $GITHUB_OUTPUT
           else
-            echo "month=0" >> $GITHUB_OUTPUT
+            # Manual input for workflow_dispatch
+            echo "month=${{ github.event.inputs.month }}" >> $GITHUB_OUTPUT
           fi
 
       - name: Run full-year simulation
@@ -58,27 +64,34 @@ jobs:
           for i in {0..12}; do
             python -m src.pipeline_train --month $i
           done
+        
+      - name: Run monthly training (scheduled with forced retrain)
+        if: ${{ steps.mode.outputs.simulate != 'true' && github.event_name == 'schedule' }}
+        run: |
+          python -m src.pipeline_train \
+            --month ${{ steps.month.outputs.month }} \
+            --force-retrain
 
-      - name: Run monthly training
-        if: ${{ steps.mode.outputs.simulate != 'true' }}
+      - name: Run monthly training (manual, drift-based only)
+        if: ${{ steps.mode.outputs.simulate != 'true' && github.event_name != 'schedule' }}
         run: |
           python -m src.pipeline_train --month ${{ steps.month.outputs.month }}
-
+            
       - name: Check retrain flag
         id: retrain
         run: |
-          flag=$(cut -d' ' -f1 state/retrain_flag.txt)
+          flag=$(cut -d' ' -f1 retrain_flag.txt)
           echo "retrain=$flag" >> $GITHUB_OUTPUT
-
+        
       - name: Stop if no retraining is needed
         if: ${{ steps.retrain.outputs.retrain != 'true' }}
         run: echo "No drift detected — skipping deployment."
-
+            
       - name: Deploy updated model
         if: ${{ steps.retrain.outputs.retrain == 'true' }}
         run: |
           cp models/fraud_model.joblib api/models/fraud_model.joblib
-
+        
       - name: Commit deployment changes
         if: ${{ steps.retrain.outputs.retrain == 'true' }}
         run: |
@@ -90,8 +103,9 @@ jobs:
 
       - name: Upload MLflow run artifacts
         uses: actions/upload-artifact@v4
-        with:
+        with: 
           name: mlflow-run
           path: ${{ github.workspace }}/mlruns
+
 
 
