--- a/.github/workflows/train_deploy.yml
+++ b/.github/workflows/train_deploy.yml
@@ -90,14 +90,14 @@ jobs:
       - name: Deploy updated model
         if: ${{ steps.retrain.outputs.retrain == 'true' }}
         run: |
-          cp models/fraud_model.joblib api/models/fraud_model.joblib
+          echo "Model saved to models/fraud_model.joblib — ready for commit."
         
       - name: Commit deployment changes
         if: ${{ steps.retrain.outputs.retrain == 'true' }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add api/models/fraud_model.joblib
+          git add models/fraud_model.joblib
           git commit -m "Deploy updated model after retraining" || echo "No changes to commit"
           git push
 
