--- a/.github/workflows/train_deploy.yml
+++ b/.github/workflows/train_deploy.yml
@@ -2,7 +2,7 @@ name: Monthly Training, Drift Detection, and Deployment
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 0 5 * *"
   workflow_dispatch:
     inputs: 
       simulate_year:
